--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <input type="text" name="username" id="username">
     <input type="password" name="password" id="password">
-    <button id="login">Login</button>
+    <button id="login">Masuk</button>
 
+     
 
     <script src="./login.js"></script>
 </body>
